<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select_all"
        android:icon="?attr/actionModeSelectAllDrawable"
        android:title="@string/select_all"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_start"
        android:icon="@drawable/ic_play_arrow"
        android:title="@string/start"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_stop"
        android:icon="@drawable/ic_stop"
        android:title="@string/stop"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_delete"
        android:title="@string/remove"
        app:showAsAction="always" />
</menu>