<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="3"
        android:key="hashcat_refresh_interval"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_refresh_interval"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        android:defaultValue="2"
        android:entries="@array/power_consumption_entries"
        android:entryValues="@array/power_consumption_values"
        android:key="hashcat_power_usage"
        android:title="@string/pref_power_consumption"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="clear_password"
        android:title="@string/pref_clear_password"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="keep_screen_on"
        android:title="@string/pref_keep_screen_on"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="wake_lock"
        android:title="@string/pref_speed_in_sleeping_mode"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
