<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/JobsFragment">

    <fragment
        android:id="@+id/JobsFragment"
        android:name="com.talybin.aircat.JobsFragment"
        android:label="@string/jobs_fragment_label"
        tools:layout="@layout/fragment_jobs">

        <action
            android:id="@+id/action_JobsFragment_to_CreateJobFragment"
            app:destination="@id/CreateJobFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:popEnterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_JobsFragment_to_jobDetailsFragment"
            app:destination="@id/jobDetailsFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:popEnterAnim="@android:anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/CreateJobFragment"
        android:name="com.talybin.aircat.NewJobFragment"
        android:label="@string/create_job_fragment_label"
        tools:layout="@layout/fragment_new_job">

        <action
            android:id="@+id/action_CreateJobFragment_to_JobsFragment"
            app:destination="@id/JobsFragment" />
    </fragment>
    <fragment
        android:id="@+id/jobDetailsFragment"
        android:name="com.talybin.aircat.JobDetailsFragment"
        android:label="@string/job_detail_fragment_label"
        tools:layout="@layout/fragment_job_details">
        <action
            android:id="@+id/action_jobDetailsFragment_to_JobsFragment"
            app:destination="@id/JobsFragment" />
    </fragment>
</navigation>
