<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/job_item_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/job_item_passwd_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="5dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_password_16dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/colorSubTitle"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/job_item_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:text="sample123"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/job_item_copy_passwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/darker_gray"
            app:srcCompat="?attr/actionModeCopyDrawable" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/job_item_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dip"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/job_item_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/not_running"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/job_item_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/complete_percent"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/job_item_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cracking_speed"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/job_item_est_time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="4dp"
        android:text="@string/estimated_time"
        android:textSize="12sp" />

</LinearLayout>